// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin base 1`] = `
Object {
  ".css": Object {
    "code": "
.App {
  text-align: center;
}
.App-header {
  background-color: #f9f6f6;
  color: #32485f;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}
.App-link {
  color: #00c185;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
  margin-bottom: 1rem;
  animation: App-logo-spin infinite 1.6s ease-in-out alternate;
}
@keyframes App-logo-spin {
from {
    transform: scale(1);
}
to {
    transform: scale(1.06);
}
}
",
    "map": "",
  },
  ".js": Object {
    "code": "
var scriptExports = {
  data() {
    return {
      message: \\"Learn Vue\\"
    };
  }
};

var options = typeof scriptExports === 'function' ? scriptExports.options : scriptExports;
const defaultExport = options;
var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"div\\", { staticClass: \\"App\\" }, [
    _c(\\"header\\", { staticClass: \\"App-header\\" }, [
      _c(\\"img\\", {
        staticClass: \\"App-logo\\",
        attrs: { src: \\"/logo.svg\\", alt: \\"logo\\" }
      }),
      _vm._v(\\" \\"),
      _vm._m(0),
      _vm._v(\\" \\"),
      _c(
        \\"a\\",
        {
          staticClass: \\"App-link\\",
          attrs: {
            href: \\"https://vuejs.org\\",
            target: \\"_blank\\",
            rel: \\"noopener noreferrer\\"
          }
        },
        [_vm._v(_vm._s(_vm.message))]
      )
    ])
  ])
}
var staticRenderFns = [
  function() {
    var _vm = this
    var _h = _vm.$createElement
    var _c = _vm._self._c || _h
    return _c(\\"p\\", [
      _vm._v(\\"\\\\n      Edit\\\\n      \\"),
      _c(\\"code\\", [_vm._v(\\"src/App.vue\\")]),
      _vm._v(\\" and save to reload.\\\\n    \\")
    ])
  }
]
render._withStripped = true


defaultExport.render = render
defaultExport.staticRenderFns = staticRenderFns
export default defaultExport",
    "map": "",
  },
}
`;

exports[`plugin base only tpl 1`] = `
Object {
  ".js": Object {
    "code": "const defaultExport = {};
var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", [_vm._v(\\"Vue Content Only Tpl\\")])
}
var staticRenderFns = []
render._withStripped = true


defaultExport.render = render
defaultExport.staticRenderFns = staticRenderFns
export default defaultExport",
    "map": "",
  },
}
`;

exports[`plugin base with sourceMap 1`] = `
Object {
  ".css": Object {
    "code": "
.App {
  text-align: center;
}
.App-header {
  background-color: #f9f6f6;
  color: #32485f;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}
.App-link {
  color: #00c185;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
  margin-bottom: 1rem;
  animation: App-logo-spin infinite 1.6s ease-in-out alternate;
}
@keyframes App-logo-spin {
from {
    transform: scale(1);
}
to {
    transform: scale(1.06);
}
}
",
    "map": "",
  },
  ".js": Object {
    "code": "
var scriptExports = {
  data() {
    return {
      message: \\"Learn Vue\\"
    };
  }
};

var options = typeof scriptExports === 'function' ? scriptExports.options : scriptExports;
var scriptExports = options;
var options = typeof scriptExports === 'function' ? scriptExports.options : scriptExports;
const defaultExport = options;
var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"div\\", { staticClass: \\"App\\" }, [
    _c(\\"header\\", { staticClass: \\"App-header\\" }, [
      _c(\\"img\\", {
        staticClass: \\"App-logo\\",
        attrs: { src: \\"/logo.svg\\", alt: \\"logo\\" }
      }),
      _vm._v(\\" \\"),
      _vm._m(0),
      _vm._v(\\" \\"),
      _c(
        \\"a\\",
        {
          staticClass: \\"App-link\\",
          attrs: {
            href: \\"https://vuejs.org\\",
            target: \\"_blank\\",
            rel: \\"noopener noreferrer\\"
          }
        },
        [_vm._v(_vm._s(_vm.message))]
      )
    ])
  ])
}
var staticRenderFns = [
  function() {
    var _vm = this
    var _h = _vm.$createElement
    var _c = _vm._self._c || _h
    return _c(\\"p\\", [
      _vm._v(\\"\\\\n      Edit\\\\n      \\"),
      _c(\\"code\\", [_vm._v(\\"src/App.vue\\")]),
      _vm._v(\\" and save to reload.\\\\n    \\")
    ])
  }
]
render._withStripped = true


defaultExport.render = render
defaultExport.staticRenderFns = staticRenderFns
export default defaultExport",
    "map": "",
  },
}
`;
